--- a/src/components/GoHome/GoHome.css
+++ b/src/components/GoHome/GoHome.css
@@ -20,10 +20,10 @@
 }
 .gradient-bg{
     background: rgb(2,0,36);
-    background: -moz-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
+    /* background: -moz-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
     background: -webkit-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
     background: linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#560d87",GradientType=1); 
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#560d87",GradientType=1);  */
 }
 
 .home-icon{
