--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,15 +4,16 @@
     align-items: center;
     width: 65%;
     align-self: center;
+    margin-top: 4px;
 }
 .header-container>h1{
     font-size: 2em;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 57px;
     text-align: center;
     letter-spacing: 0.2px;
-    color: #000;
+    color: rgb(2,0,36);
     margin:0;
 }
 .header-container>p{
@@ -21,7 +22,7 @@
     font-size: 1.4em;
     line-height: 1.4em;
     text-align: center;
-    margin: 10px;
+    margin: 7px;
 }
 
 @media only screen and (max-width:640px) {
