--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,18 +1,37 @@
 .home-container{
     background: rgb(2,0,36);
-    background: -moz-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
+    /* background: -moz-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
     background: -webkit-linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
     background: linear-gradient(39deg, rgba(2,0,36,1) 0%, rgba(139,0,255,1) 40%, rgba(51,95,184,1) 94%, rgba(86,13,135,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#560d87",GradientType=1); 
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#560d87",GradientType=1);  */
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 100px 10%;
     min-height: 100vh;
     box-sizing: border-box;
 }
-
+.home-container>.left{
+    width: 60%;
+}
+.home-container>.right{
+    width: 40%;
+}
+.right{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+}
+.left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4%;
+}
 .header-text{
     display: flex;
     flex-direction: column;
@@ -21,7 +40,7 @@
 
 .header-text>h1{
     color: #fff;
-    font-size: 3em;
+    font-size: 2.5em;
     font-style: normal;
     font-weight: 900;
     line-height: 62px;
@@ -35,8 +54,8 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
-    color: #e5e5e5;
-    margin: 10px;
+    color: #dad8d8;
+    margin: 7px;
 }
 
 .head-btns{
@@ -44,6 +63,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 35px 10px;
+    justify-content: center;
 }
 .btn{
     text-decoration: none;
@@ -54,7 +74,8 @@
     height: 52px;
     left: 0;
     top:0px;
-    box-shadow: 0px 4px 20px rgba(0,0,0,15);
+    box-shadow: 2px 2px 6px rgba(100,100,100,15);
+    transition:all 0.3s ease-in-out;
     border-radius: 39px;
     margin: 5px;
 }
@@ -63,16 +84,22 @@
     background: #fff;
     color: #112d57;
 }
+.btn-white:hover{
+    background: #e7e7e7;
+}
 
 .btn-transparent{
-    border:1px solid #fff;
+    border:2px solid #fff;
     box-sizing: border-box;
     color: #fff;
+}
+.btn-transparent:hover{
+    border:2px solid #fff;
 }
 
 .btn:hover{
     cursor: pointer;
-    box-shadow: 1px 10px 32px rgba(0,0,0,45);
+    box-shadow: 1px 10px 12px rgba(200,200,200,45);
     transition: all 0.3s ease-in-out;
 }
 
@@ -85,31 +112,55 @@
     text-align: center;
 }
 
-.splash-image{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.profile_bg{
+    /* max-height: 90%;
+    max-width: 90%; */
+    margin-top: -35px;
+    fill: rgb(178, 211, 255);
 }
-.home-anime{
-    margin-bottom: -80px;
+.profile-img{
+    margin-left: 10px;
+    position: absolute;
+    width: 100%;
+}
+.profile_bg:hover{
+    transition: all 0.2s ease-in-out;
+    margin-left: 15px;
+    box-shadow:  6px rgba(255,255,255,15);
 }
 
 /* for small height screen size */
-@media only screen and (max-height:550px){
-    .home-anime{
-        width: 400px;
+@media only screen and (min-width:640px) and (max-width:720px){
+    .home-container{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .home-container>.left{
+        width: 80%;
     }
 }
 
 /* for small height screen size */
 @media only screen and (max-width:640px){
+    .home-container{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .home-container>.left, .home-container>.right{
+        width: 80%;
+    }
     .home-anime{
         width: 80%;
         align-self: center;
-        margin-bottom: -20px;
+        margin-bottom: 0px;
     }
     .head-btns{
-        margin: 10px 10px 30px 10px;
+        margin: 8px 8px 25px 8px;
         display: flex;
         flex-direction: column;
         justify-content: center;
