--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 44px;
+    padding: 22px 4px;
     align-items: center;
     justify-content: center;
 }
@@ -26,9 +26,11 @@
 .image-container{
     width: 100%;
     border-radius: 20px;
+    border-radius: 20px 20px 0 0 ;
 }
 .project-external-link{
-    border-radius: 20px 20px 0 0 ;
+    text-decoration: none;
+    color: rgb(2,0,36);;
 }
 .project-image{
     display: block;
@@ -36,7 +38,6 @@
     max-height: 100%;
     max-width: 100%;
 }
-
 .project-details-container{
     display: flex;
     flex-direction: column;
@@ -53,12 +54,21 @@
 .project-heading{
     margin: 0;
 }
-
 .project-details{
     font-weight: 300;
     font-size: 16px;
     line-height: 28px;
-    color:#7d7987
+    color:#686470;
+}
+.project-details-line-clamp{
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+    color:#686470;
+    display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
 
 @media only screen and (max-width:640px){
