--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -6,7 +6,7 @@
     top:0;
     width: 100%;
     height: 100%;
-    overflow:auto;
+    overflow:-moz-hidden-unscrollable;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -16,12 +16,15 @@
 .modal-container{
     background-color: #fefefe;
     padding: 20px;
-    border-radius: 2px;
-    width: 80%;
+    max-height: 90vh;
+    border-radius: 10px;
+    width: 70%;
     box-shadow: 0px 4px 31px rgba(0,0,0,15);
     display: flex;
     flex-direction: column;
     font-style: normal;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .modal-header{
@@ -38,11 +41,13 @@
 .close{
     margin:0;
     font-size: 1.5em;
+    cursor: pointer;
 }
 .modal-body{
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 8px;
+    padding: 5px 20px;
 }
 .modal-body > * {
     margin:5px 0;
@@ -51,7 +56,7 @@
 .modal-footer{
     display: flex;
     flex-direction: row-reverse;
-    padding: 10px 0;
+    padding: 1px 0;
 }
 .modal-btn{
     border-width: 0;
@@ -63,6 +68,7 @@
     transition: background-color 0.3s;
     color:#ecf0f1;
     text-decoration: none;
+    cursor: pointer;
 }
 .btn-green{
     background-color:green;
@@ -76,4 +82,8 @@
 }
 .btn-red:hover,.btn-red:focus{
     background-color: rgb(226, 44, 44);
+}
+.link{
+    color: rgb(115, 41, 175);
+    cursor: pointer;
 }
