Modified Project Card and Added Projects and skills

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,7 +9,9 @@
 }
 .about-main-right{
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 .about-main-left{
     display: flex;
