--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,7 +11,8 @@
     width: 350px;
     min-height: 300px;
     background: #fff;
-    box-shadow: 10px 44px 50px rgba(229,233,246,0.4);
+    border-top: 0.5px solid rgb(102, 102, 102);
+    box-shadow: 10px 44px 50px rgba(212, 203, 247, 0.4);
     display: flex;
     flex-direction: column;
     margin: 20px;
@@ -53,15 +54,16 @@
 .project-image{
     display: block;
     border-radius: inherit;
-    max-height: 100%;
-    max-width: 100%;
+    width: 100%; 
+    height: 180px; 
+    object-fit: contain;
 }
 .project-details-container{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-self: flex-start;
-    padding: 5px 20px 20px 20px;
+    padding: 15px 20px 20px 20px;
 }
 
 .project-yt-link{
