--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -14,13 +14,15 @@
 }
 .skill>img{
     width: 80px;
+    height: 80px;
     margin-bottom: 15px;
     border-radius: 40px;
     filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
+    /* object-fit: contain; */
 }
 .skill>p{
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 24px;
+    font-size: 21px;
     font-weight: bold;
     line-height: 36px;
     text-align: center;
