--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,7 +11,7 @@
     width: 350px;
     min-height: 300px;
     background: #fff;
-    border-top: 0.5px solid rgb(102, 102, 102);
+    border-top: 1px solid rgb(190, 190, 190);
     box-shadow: 10px 44px 50px rgba(212, 203, 247, 0.4);
     display: flex;
     flex-direction: column;
@@ -24,7 +24,7 @@
 	position: absolute;
     width: 150px;
     overflow: hidden;
-    /* z-index: 1; */
+    z-index: 1;
     right: -55px;
     top: 13px;
     font-size: 12px;
@@ -57,6 +57,10 @@
     width: 100%; 
     height: 180px; 
     object-fit: contain;
+}
+.project-image:hover{
+    transition: all 0.3s ease-in-out 0s;
+    transform: scale(1.06);
 }
 .project-details-container{
     display: flex;
