--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -15,7 +15,7 @@
 
 .modal-container{
     background-color: #fefefe;
-    padding: 20px;
+    padding: 10px;
     max-height: 90vh;
     border-radius: 10px;
     width: 70%;
@@ -30,12 +30,13 @@
 .modal-header{
     display: flex;
     flex-direction: row;
-    padding: 10px 0;
+    padding: 20px 5px;
     justify-content: space-between;
 }
 
 .modal-header>h1{
     margin:0;
+    font-size: 25px;
 }
 
 .close{
@@ -86,4 +87,19 @@
 .link{
     color: rgb(115, 41, 175);
     cursor: pointer;
+}
+@media only screen and (max-width:740px){
+    .modal-container{
+        background-color: #fefefe;
+        padding: 10px;
+        max-height: 90vh;
+        border-radius: 10px;
+        width: 90%;
+        box-shadow: 0px 4px 31px rgba(0,0,0,15);
+        display: flex;
+        flex-direction: column;
+        font-style: normal;
+        overflow: scroll;
+        overflow-x: hidden;
+    }    
 }
